js/js.translator/testData/incremental/invalidation/mainFunctionSelectSingleAddWrapperLater/second/root.0.kt
fun main() {
    value.ok += "!A!"
}

fun returnFalse() = false

fun callMainFromSecond() {
    if (returnFalse()) {
        main()
    }
}
